--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,6 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_deps = 
-	adafruit/Adafruit NeoPixel@^1.7.0
-	hideakitai/ArxContainer@^0.3.10
+	fastled/FastLED@^3.4.0
 upload_port = COM3
 debug_port = COM3
