--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,6 @@ board = uno
 framework = arduino
 lib_deps = 
 	fastled/FastLED@^3.4.0
+	kosme/arduinoFFT@^1.5.6
 upload_port = COM3
 debug_port = COM3
